4th fix for full screen contex menu jump

--- a/css/jquery.terminal-src.css
+++ b/css/jquery.terminal-src.css
@@ -72,16 +72,14 @@
 .terminal {
     contain: content;
 }
-html {
+body.terminal {
+    min-height: 100vh;
     height: 100%;
 }
 body.terminal {
-    min-height: 100vh;
     margin: 0;
-    height: 100%;
 }
 .terminal > div {
-    overflow: hidden;
     min-height: 100%;
 }
 .terminal > .resizer, .terminal > .font .resizer {
